--- a/Paper/abstract.tex
+++ b/Paper/abstract.tex
@@ -1,6 +1,6 @@
 \begin{abstract}
 Reducing energy consumption is a prerequisite for future advances in computing at scale.
-This fact is driving performance engineers to investigate software level power optimization as a means to reduce the energy consumed by scientific codes.
+Recently this fact has driven performance engineers to investigate software level power optimization as a means to reduce the energy consumed by scientific codes.
 This paper presents an investigation into the feasibility and potential benefits of this approach.
 We assess various power measurement and modelling techniques for their ability to help developers identify power optimizations. We then attempt to provide a realistic idea of how much benefit can be expected as a result of applying these optimizations. We show that for current hardware there is limited scope for improving energy efficiency through software optimisation alone. 
 \end{abstract}
