--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -39,7 +39,9 @@ The University of Warwick}
 \maketitle
 
 \input{abstract}
+
 \input{introduction}
+\input{background}
 \input{prior}
 \input{profiling}
 \input{optimization}
