--- a/Paper/conclusion.tex
+++ b/Paper/conclusion.tex
@@ -1,3 +1,3 @@
 \section{Conclusions}
-
+\label{sec:conclusion}
 \todo{IN an intuitive sense the covariance between these two signals, namely power and time consumption, is prohibitively high. The window of optimization exists in the ...word meaning freedom/decoupled component/... window}
