--- a/Paper/library.bib
+++ b/Paper/library.bib
@@ -1,10 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Stephen Roberts at 2014-09-02 08:28:30 +0100 
+%% Created for Stephen Roberts at 2014-11-08 13:58:09 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@article{birnbaum:2000aa,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2000PhT....53a..38B},
+	Author = {{Birnbaum}, J. and {Williams}, R.~S.},
+	Date-Added = {2014-11-08 13:57:55 +0000},
+	Date-Modified = {2014-11-08 13:57:57 +0000},
+	Doi = {10.1063/1.882936},
+	Journal = {Physics Today},
+	Month = jan,
+	Number = 1,
+	Pages = {38-42},
+	Title = {{Physics and the information revolution}},
+	Volume = 53,
+	Year = 2000,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1063/1.882936}}
 
 @inproceedings{huang:2009aa,
 	Author = {Huang, S. and Xiao, S. and Feng, W.},
@@ -269,7 +287,7 @@
 	Author = {Shao, Y.S. and Brooks, D.},
 	Booktitle = {Low Power Electronics and Design (ISLPED), 2013 IEEE International Symposium on},
 	Date-Added = {2014-08-13 14:20:07 +0000},
-	Date-Modified = {2014-08-13 14:20:13 +0000},
+	Date-Modified = {2014-11-08 13:57:48 +0000},
 	Doi = {10.1109/ISLPED.2013.6629328},
 	Keywords = {benchmark testing;energy consumption;microprocessor chips;multi-threading;multiprocessing systems;power aware computing;Intel Xeon Phi processor;Linpack code;Xeon Phi software developers;commercial manycore multithread x86-based processor;energy characterization;energy efficiency;energy-efficient software;high performance computing processors;high-level energy model;instruction-level energy model;processor energy consumption;Bandwidth;Computational modeling;Prefetching;Radiation detectors;Vectors;Energy Characterization;Instruction-Level Energy Model;Xeon Phi},
 	Month = {Sept},
