--- a/Paper/library.bib
+++ b/Paper/library.bib
@@ -1,12 +1,39 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Stephen Roberts at 2014-11-08 13:58:09 +0000 
+%% Created for Stephen Roberts at 2014-11-09 17:36:38 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{kwon:2013aa,
+	Author = {Keunjoo Kwon and Seungchul Chae and Kyoung-Gu Woo},
+	Booktitle = {Consumer Electronics (ICCE), 2013 IEEE International Conference on},
+	Date-Added = {2014-11-09 17:34:51 +0000},
+	Date-Modified = {2014-11-09 17:34:52 +0000},
+	Doi = {10.1109/ICCE.2013.6486770},
+	Issn = {2158-3994},
+	Keywords = {mobile computing;operating systems (computers);scheduling;smart phones;CPU;application-level energy-efficient scheduling;dynamic frequency scaling;interval-based dynamic voltage scaling algorithms;mobile devices;monitoring-based services;operating systems;power consumption reduction;smartphones},
+	Month = {Jan},
+	Pages = {3-6},
+	Title = {An application-level energy-efficient scheduling for dynamic voltage and frequency scaling},
+	Year = {2013},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/ICCE.2013.6486770}}
+
+@inproceedings{burton:2014aa,
+	Author = {Burton, E.A. and Schrom, G. and Paillet, F. and Douglas, J. and Lambert, W.J. and Radhakrishnan, K. and Hill, M.J.},
+	Booktitle = {Applied Power Electronics Conference and Exposition (APEC), 2014 Twenty-Ninth Annual IEEE},
+	Date-Added = {2014-11-09 17:27:16 +0000},
+	Date-Modified = {2014-11-09 17:27:19 +0000},
+	Doi = {10.1109/APEC.2014.6803344},
+	Keywords = {MIM devices;capacitors;electronics packaging;inductors;microprocessor chips;system-on-chip;voltage regulators;4th generation intel core SoC;4th generation intel core microprocessor;FIVR;fanless tablet;frequency 140 MHz;fully integrated voltage regulator;mobile product;multiphase buck regulator;nonmagnetic package trace inductor;on-die MIM capacitor;power 3 W to 300 W;size 22 nm;unity gain bandwidth;Current measurement;Inductors;Logic gates;Microprocessors;Regulators;Voltage control;Voltage measurement},
+	Month = {March},
+	Pages = {432-439},
+	Title = {FIVR - Fully integrated voltage regulators on 4th generation Intel Core SoCs},
+	Year = {2014},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/APEC.2014.6803344}}
 
 @article{birnbaum:2000aa,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
