--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -8,6 +8,7 @@
 \usepackage{multirow}
 \usepackage{amsfonts}
 \usepackage{mathtools}
+\usepackage{booktabs}
 
 \title{Software Optimizations for Reduced Energy Consumption: A Feasibility Study}                            
 \author{\IEEEauthorblockN{Stephen I. Roberts\\ and Stephen Jarvis}
