--- a/Paper/profiling.tex
+++ b/Paper/profiling.tex
@@ -1,14 +1,19 @@
 \section{Power Profiling}
 \label{sec:profiling}
+\fragment{Often power models are assessed by their performance relative to a measured baseline. Although this is important, this figure is somewhat meaningless without context. Our approach is one of quantifying 
 
+
+We first construct a power model in the vein of those proposed in the literature. We then try to link the predictions of our model to the power equations given previously. Essentially we are attempting to test against the null hypothesis - to show how much better or worse our regressed model is better than a naive attempt.
+
+
+}
+\fragment{The unknown quantities in our simplified power equations can be empirically measured.}
 Baseline against which to compare the work of others. 
 
 
 \fragment{Accuracy figures without context are notoriously unreliable. To compensate for this we compare the outputs of various models against a baseline we have devised. This baseline consists of what we regard as the simplest non-trivial power model conceivable. This model stands in as a sort of null hypothesis test, our justification being that a complex model only adds value to the extent with which it outperforms this toy model.}
 
 \fragment{Our toy model is not the simplest model possible - It is well established and readily apparent that runtime is the largest contributory factor to power consumption. One could therefore imagine a simple power model}
-
-
 
 \fragment{We consider this to be the absolute minimum power consumption possible.}
 
