--- a/Paper/shadow.tex
+++ b/Paper/shadow.tex
@@ -37,3 +37,4 @@ The end of Dennard scaling is expected to shrink the range of DVFS in future nod
 
 \reword{Dennard scaling, which roughly, that as transistors get smaller their power density stays constant, so that the power use stays in proportion with area: both voltage and current scale (downward) with length \todo{cite Dennard's paper}}
 
+\fragment{When viewed in this context, all event-driven power models are simply linking performance events back to their associated activity costs/factors}
