--- a/Paper/library.bib
+++ b/Paper/library.bib
@@ -1,12 +1,26 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Stephen Roberts at 2014-11-09 17:36:38 +0000 
+%% Created for Stephen Roberts at 2014-11-11 01:11:36 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{chu:1999aa,
+	Author = {Chu, R.C. and Simons, R.E. and Chrysler, G.M.},
+	Booktitle = {Semiconductor Thermal Measurement and Management Symposium, 1999. Fifteenth Annual IEEE},
+	Date-Added = {2014-11-11 01:10:19 +0000},
+	Date-Modified = {2014-11-11 01:10:20 +0000},
+	Doi = {10.1109/STHERM.1999.762421},
+	Issn = {1065-2221},
+	Keywords = {cooling;integrated circuit packaging;integrated circuit testing;multichip modules;thermal analysis;thermal management (packaging);thermal resistance;condenser air flow rate;cooling;direct air cooling;electronics module;enhanced thermosyphon heat loop;evaporator fins;evaporator performance;fill volume;forced convection;heat load;high performance electronics module;liquid-to-air cooling;module cooling;thermal resistance;thermosyphon;thermosyphon performance;water working fluid;CMOS technology;Costs;Difference equations;Electronics cooling;Integrated circuit technology;Resistance heating;Thermal conductivity;Thermal loading;Thermal resistance;Water heating},
+	Month = {March},
+	Pages = {1-9},
+	Title = {Experimental investigation of an enhanced thermosyphon heat loop for cooling of a high performance electronics module},
+	Year = {1999},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/STHERM.1999.762421}}
 
 @inproceedings{kwon:2013aa,
 	Author = {Keunjoo Kwon and Seungchul Chae and Kyoung-Gu Woo},
@@ -26,7 +40,7 @@
 	Author = {Burton, E.A. and Schrom, G. and Paillet, F. and Douglas, J. and Lambert, W.J. and Radhakrishnan, K. and Hill, M.J.},
 	Booktitle = {Applied Power Electronics Conference and Exposition (APEC), 2014 Twenty-Ninth Annual IEEE},
 	Date-Added = {2014-11-09 17:27:16 +0000},
-	Date-Modified = {2014-11-09 17:27:19 +0000},
+	Date-Modified = {2014-11-11 01:11:01 +0000},
 	Doi = {10.1109/APEC.2014.6803344},
 	Keywords = {MIM devices;capacitors;electronics packaging;inductors;microprocessor chips;system-on-chip;voltage regulators;4th generation intel core SoC;4th generation intel core microprocessor;FIVR;fanless tablet;frequency 140 MHz;fully integrated voltage regulator;mobile product;multiphase buck regulator;nonmagnetic package trace inductor;on-die MIM capacitor;power 3 W to 300 W;size 22 nm;unity gain bandwidth;Current measurement;Inductors;Logic gates;Microprocessors;Regulators;Voltage control;Voltage measurement},
 	Month = {March},
@@ -294,7 +308,7 @@
 	Author = {Broomhead, Timothy and Ridoux, Julien and Veitch, Darryl},
 	Booktitle = {Precision Clock Synchronization for Measurement, Control and Communication, 2009. ISPCS 2009. International Symposium on},
 	Date-Added = {2014-08-22 14:54:19 +0000},
-	Date-Modified = {2014-08-22 14:55:05 +0000},
+	Date-Modified = {2014-11-11 01:10:28 +0000},
 	Keywords = {timer rtsc clock high resolution timers unix rtc},
 	Organization = {IEEE},
 	Pages = {1--6},
